tests/NormalTests/paczka1/small_fuzzy/38097416.err
Error in line 4: GjVLKdQU35o S428 69,7
Error in line 11: JWUi4 S718 59,56
Error in line 9: S786 S383 1,6
